--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,45 +1,59 @@
 .navbar {
-    background-color: steelblue;
+    background-color: midnightblue;
     color: silver;
-    font-family: 'PT Serif', serif;
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Lato', sans-serif;
   }
-
+.navbar-brand{
+    font-size: x-large;
+}
   .nav-link {
     color:silver;
   }
-
   .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(211,211,211, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
   }
 
   body {
-    font-family: 'PT Serif', serif;
-    font-family: 'Roboto Slab', serif;
-    color: silver;
+     color: silver;
+    font-family: 'Lato', sans-serif;    
   }
 
   .footer-style {
-    background-color:steelblue;
-    height: 40px;
+    background-color:midnightblue;
+    height: 50px;
   }
 
   .fa-linkedin {
     color: silver;
+    font-size: 30px;
+    width: 50px;
+    position: relative;
+    top: 10px;
   }
 
   .fa-instagram {
     color:silver;
+    font-size: 30px;
+    width: 50px;
+    position: relative;
+    top: 10px;
   } 
 
   .fa-github {
     color:silver;
+    font-size: 30px;
+    width: 50px;
+    position: relative;
+    top: 10px;
   }
+
   section.portfolio{
     margin-top: 5rem;
     padding-left: 2rem;
     padding-right: 2rem;
-    color: steelblue;
+    color: midnightblue;
+    font-family: 'Lato', sans-serif;
+    
   }
  .material-icons {
     font-weight: normal;
